[project]
name = "holiday_csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin H Wilson", email = "khwilson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "holidays>=0.73",
]

[project.scripts]
holidays = "holiday_csv.main:generate_holiday_calendar"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
